MB-8318 do not queue response handler if no connection

When ensureConnect() is failed we should not queue the
given response handler but just delete it. Otherwise, this
may cause a subsequent command to call implicitResponse()
upon the completion of response. The implcitResponse() is
a defunct virtual call.

Change-Id: I5b18cb62ad93165854f52756f59f048a82066501
Reviewed-on: http://review.couchbase.org/26428
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>